<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfoActivity"
    android:id="@+id/appinfoparent"
    android:background="@drawable/about_bground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.96"
            app:srcCompat="@drawable/dashboardtopcardview"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/btnSideMenu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menuicon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="300dp"
            android:layout_height="115dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/tutorial_backgroundpicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="121dp"
                android:layout_height="75dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/about_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.958" />

            <TextView
                android:id="@+id/text_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="36dp"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="#f1e4c2"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/lines2"
                android:layout_width="match_parent"
                android:layout_height="1.1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="51dp"
                android:background="#f1e4c2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_transformyourwriting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="64dp"
                android:text="@string/transform_your_writing2"
                android:textAlignment="center"
                android:textColor="#f1e4c2"
                android:textSize="10sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_transparentbackground"
            android:layout_width="368dp"
            android:layout_height="579dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/about_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.604"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            tools:ignore="UnknownId">


            <TextView
                android:id="@+id/text_title"
                android:layout_width="314dp"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:text="@string/about_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/darkbrown"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/about_line2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="480dp"
                android:background="@color/darkbrown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_titledescription"
                android:layout_width="306dp"
                android:layout_height="102dp"
                android:layout_marginTop="116dp"
                android:text="@string/about_titledesc"
                android:textAlignment="center"
                android:textColor="@color/darkbrown"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <View
                android:id="@+id/about_line3"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="76dp"
                android:background="@color/darkbrown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_purpose"
                android:layout_width="308dp"
                android:layout_height="81dp"
                android:layout_marginTop="216dp"
                android:text="@string/title_purpose"
                android:textAlignment="center"
                android:textColor="@color/darkbrown"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_year"
                android:layout_width="303dp"
                android:layout_height="29dp"
                android:text="@string/year"
                android:textAlignment="center"
                android:textColor="@color/darkbrown"
                android:textSize="11sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_line3"
                app:layout_constraintVertical_bias="0.17" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <include layout="@layout/nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>